--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ th {
   background-color: #a0d0dd;
 }
 
+.light-green-row {
+  background-color: #f0fff0;
+}
+
 .green-row {
   background-color: #e0ffe0;
 }
